fix z-index of composer (more specific element)

--- a/default.css
+++ b/default.css
@@ -105,7 +105,7 @@ a[component="header/profilelink"] i,
 }
 
 /* Composer z-index fix for emoji-dialog */
-composer,
+.composer.reply,
 .modal {
   z-index: 9999 !important;
 }
